--- a/env.yml
+++ b/env.yml
@@ -2,11 +2,15 @@ name: bfang
 channels:
 - defaults
 dependencies:
+- asn1crypto=0.24.0=py37_0
 - backcall=0.1.0=py37_0
 - blas=1.0=mkl
 - bleach=3.0.2=py37_0
 - ca-certificates=2018.03.07=0
 - certifi=2018.10.15=py37_0
+- cffi=1.11.5=py37he75722e_1
+- chardet=3.0.4=py37_1
+- cryptography=2.3.1=py37hc365091_0
 - dbus=1.13.2=h714fa37_1
 - decorator=4.3.0=py37_0
 - entrypoints=0.2.3=py37_2
@@ -18,6 +22,7 @@ dependencies:
 - gst-plugins-base=1.14.0=hbbd80ab_1
 - gstreamer=1.14.0=hb453b48_1
 - icu=58.2=h9c2bf20_1
+- idna=2.7=py37_0
 - intel-openmp=2019.1=144
 - ipykernel=5.1.0=py37h39e3cac_0
 - ipython=7.2.0=py37h39e3cac_0
@@ -64,8 +69,11 @@ dependencies:
 - prometheus_client=0.4.2=py37_0
 - prompt_toolkit=2.0.7=py37_0
 - ptyprocess=0.6.0=py37_0
+- pycparser=2.19=py37_0
 - pygments=2.2.0=py37_0
+- pyopenssl=18.0.0=py37_0
 - pyqt=5.9.2=py37h05f1152_2
+- pysocks=1.6.8=py37_0
 - python=3.7.0=h6e4f718_3
 - python-dateutil=2.7.5=py37_0
 - pytz=2018.7=py37_0
@@ -73,6 +81,7 @@ dependencies:
 - qt=5.9.6=h8703b6f_2
 - qtconsole=4.4.2=py37_0
 - readline=7.0=h7b6447c_5
+- requests=2.20.1=py37_0
 - send2trash=1.5.0=py37_0
 - setuptools=40.6.2=py37_0
 - sip=4.19.8=py37hf484d3e_0
@@ -83,6 +92,7 @@ dependencies:
 - tk=8.6.8=hbc83047_0
 - tornado=5.1.1=py37h7b6447c_0
 - traitlets=4.3.2=py37_0
+- urllib3=1.23=py37_0
 - wcwidth=0.1.7=py37_0
 - webencodings=0.5.1=py37_1
 - wheel=0.32.3=py37_0
